--- a/map.html
+++ b/map.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="referrer" content="no-referrer">
   <meta charset="utf-8">
   <title>Mapbox Center on Current Location</title>
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.0/mapbox-gl.js"></script>
